# push2d2

./: CMakeLists.txt  README.md  config.conf  config.h  display.c  p2d2.c  p2d2.conf  p2d2.h  p2d2.h.in  p2d2.service  rotary.c  rotary.h
src/: CMakeLists.txt  calc.c  config.c  display.c  p2d2.c  protocol.c  rotary.c  serial.c
src/include/: calc.h  config.h  display.h  p2d2.h.in  protocol.h  rotary.h  serial.h
test/: CMakeLists.txt  test_p2d2.c
